<resources>
    <string name="app_name">AgNos</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="facebook_app_id">151385112320796</string>
    <string name="fb_login_protocol_scheme">fb151385112320796</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_l">Sign in</string>
    <string name="title_contact_list">Items</string>
    <string name="title_contact_detail">contact Detail</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="forget_header">Forgot password?</string>
    <string name="change_header">Change password?</string>
    <string name="reg_login_header">Already registered. Login Me!</string>
    <string name="log_in_reg">Not a member? Get registered now! </string>
    <string name="forget_detail">we just need your registred Email Id to send you password reset instructions.</string>
    <string name="splash_message">Swipe the screen to continue..</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="email">E-mail</string>
    <string name="hint_password">password</string>
    <string name="news_feeding">Company news feeding.............................................................
        Company news feeding.............................................................
        Company news feeding.............................................................
        Company news feeding.............................................................</string>
    <string name="title_activity_temp">temp</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main_screen_with_navigation">Main_screen_with_navigation</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_locate_us">Map</string>


    <string name="button_feedback">Send feedback</string>
    <string name="title_send_feedback">Send feedback</string>

    <string name="mail_feedback_email">agnosdevelopers@gmail.com</string>
    <string name="mail_feedback_subject">Feedback from android app.</string>
    <string name="mail_feedback_message">Hi,
\n\nYour Feedback ! \n\n I would like to give you some feedback:</string>
    <string name="mail_share_subject">Agnos Developer Android App.</string>
    <string name="title_share">Agnos Developer Android App</string>
    <string name="mail_share_message"> </string>
    <string name="company_name">Agnos Developer</string>
    <string name="company_details">B-5,364/365, Sector-5,Rohini, Delhi-110085 \n www.agnosdevelopers.in \n Agnosdevelopers@gmail.com Ph:98737359735,8826843701</string>
    <string name="registration_message_1">* Please fill all the details carefully. All the details are mandatory to be filled by personnel or company\'s associate only.</string>
    <string name="registration_message_2">* These details are for company\'s associate only. Leave it blank if you are not working for any company or business organisation.</string>
    <string name="android_application">Android Application</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="back">Back</string>
    <string name="signed_out">Log Out</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="loading">Logging out…</string>
    <string name="loading_in">Logging in…</string>
    <string name="logout">Are you sure you want to logout ?</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Login with Google</string>
    <string name="login">log in</string>
    <string name="remember_me">Remember me</string>
    <string name="Facebook_login">Facebook Login with Agons Developers App</string>
    <string name="Facebook_desc"><b>Agnos Developers</b> Application will receive the following information from Facebook account : User name, Email-id, profile picture, cover photo, gender, networks and personal description.</string>
    <string name="Facebook_desc2">This does not let the app post to Facebook.</string>


</resources>
