<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgound"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/NoActionBar"
    tools:context="naveen.agnosbeta.agnos.LoginActivity">

    <!-- Login progress -->

    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:contentDescription="TODO"
                android:src="@drawable/siginup" />

            <!-- Login Button -->


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/text_secondary">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1"
                    android:elevation="1dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/text_secondary"
                    android:textColorLink="@color/colorAccent" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/text_secondary">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/text_secondary"
                    android:textColorLink="@color/colorAccent" />

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/remember_me"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:paddingStart="5dp"
                android:text="@string/remember_me"
                android:textColorLink="@color/colorAccent" />


            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorAccent"
                android:text="@string/login"
                android:textColor="@color/common_google_signin_btn_text_dark_pressed" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:onClick="forget_pass"
                android:text="@string/forget_header"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/reg_button"
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:onClick="reg_activity"
                android:text="@string/log_in_reg"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <com.shobhitpuri.custombuttons.GoogleSignInButton
                android:id="@+id/google_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/google_sign_up"
                app:isDarkTheme="false" />

            <!-- Link to Login Screen -->


        </LinearLayout>
    </ScrollView>


</RelativeLayout>
