<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgound"
    android:orientation="vertical"
    android:weightSum="4">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="255dp"
            android:layout_above="@+id/sign_out_and_disconnect"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/logout_main" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imageView4"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:fontFamily="@font/annie_use_your_telescope"
            android:padding="10dp"
            android:text="Log Out?"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView2"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/logout"
            android:textAlignment="center"
            android:textSize="14dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="500dp"
            android:layout_height="500dp"
            android:layout_centerInParent="true"
            android:visibility="visible"
            tools:visibility="gone">

        </com.google.android.gms.common.SignInButton>

        <LinearLayout
            android:id="@+id/sign_out_and_disconnect"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone"
            tools:visibility="visible">

            <Button
                android:id="@+id/sign_out_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/sign_out"
                android:textColor="@color/common_google_signin_btn_text_dark_pressed"
                android:textStyle="bold" />

            <Button
                android:id="@+id/disconnect_button"
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:layout_marginTop="20dip"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/back"
                android:textAllCaps="false" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
