<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="naveen.agnosbeta.agnos.About">


    <WebView
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/ctr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/back_about"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_above="@+id/imageViewAbout"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/colorAccent"
            android:contentDescription="@string/todo"
            android:onClick="about_icon"
            android:padding="5dp"
            app:srcCompat="@drawable/back" />

        <TextView
            android:id="@+id/user_email_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/back_about"
            android:background="@color/colorAccent"
            android:fontFamily="@font/almendra_display"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/textview"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/text_Primary"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="1dp" />


        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_email_about"
            android:layout_toEndOf="@+id/back_about"
            android:background="@color/colorAccent">

            <ImageView
                android:id="@+id/facebook_about"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="50dp"
                android:layout_toEndOf="@+id/whatsapp_about"
                android:contentDescription="@string/todo"
                android:onClick="about_icon"
                android:padding="10dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/facebook_icon" />

            <ImageView
                android:id="@+id/twitter_about"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="50dp"
                android:layout_toEndOf="@+id/facebook_about"
                android:contentDescription="@string/todo"
                android:onClick="about_icon"
                android:padding="10dp"
                app:srcCompat="@drawable/twitter_icon" />

            <ImageView
                android:id="@+id/whatsapp_about"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="50dp"
                android:layout_toEndOf="@+id/website_about"
                android:contentDescription="@string/todo"
                android:onClick="about_icon"
                android:padding="10dp"
                app:srcCompat="@drawable/whatsapp_icon" />

            <ImageView
                android:id="@+id/website_about"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="50dp"
                android:contentDescription="@string/todo"
                android:onClick="about_icon"
                android:padding="10dp"
                app:srcCompat="@drawable/website" />

            <ImageView
                android:id="@+id/blog_about"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="50dp"
                android:layout_toEndOf="@+id/twitter_about"
                android:contentDescription="@string/todo"
                android:onClick="about_icon"
                android:padding="10dp"
                app:srcCompat="@drawable/blogger" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/imageViewAbout"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/relativeLayout2"
            android:contentDescription="@string/todo"
            android:padding="10dp"
            android:src="@drawable/log_in" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageViewAbout"
            android:layout_margin="5dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/agons_about" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:paddingTop="80dp">

                <TextView
                    android:id="@+id/member_names"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cinzel_decorative_bold"
                    android:paddingBottom="5dp"
                    android:text="@string/company_name"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/member_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:text="@string/company_details"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>
